separate blocking and async implementations
async + elided borrow + no return = error
fix needed for that use case (e.g. using `State<'_, T>`)

--- a/examples/commands/public/index.html
+++ b/examples/commands/public/index.html
@@ -26,6 +26,7 @@
 
     const container = document.querySelector('#container')
     const commands = [
+      { name: 'borrow_cmd' },
       { name: 'window_label' },
       { name: 'simple_command' },
       { name: 'stateful_command' },
