--- a/tooling/bench/tests/files_transfer/public/index.html
+++ b/tooling/bench/tests/files_transfer/public/index.html
@@ -10,39 +10,39 @@
     <h1>Welcome to Tauri!</h1>
 
     <script>
-      window.addEventListener("DOMContentLoaded", (event) => {
+      window.addEventListener('DOMContentLoaded', (event) => {
         window.__TAURI__
-          .invoke("tauri", {
-            __tauriModule: "Fs",
+          .invoke('tauri', {
+            __tauriModule: 'Fs',
             message: {
-              cmd: "readBinaryFile",
-              path: ".tauri_3mb.json",
+              cmd: 'readBinaryFile',
+              path: '.tauri_3mb.json',
               options: {
                 // home folder
-                dir: 11,
-              },
-            },
+                dir: 11
+              }
+            }
           })
           .then((_data) => {
-            window.__TAURI__.invoke("tauri", {
-              __tauriModule: "Process",
+            window.__TAURI__.invoke('tauri', {
+              __tauriModule: 'Process',
               message: {
-                cmd: "exit",
-                exitCode: 0,
-              },
-            });
+                cmd: 'exit',
+                exitCode: 0
+              }
+            })
           })
           .catch((_error) => {
             // error
-            window.__TAURI__.invoke("tauri", {
-              __tauriModule: "Process",
+            window.__TAURI__.invoke('tauri', {
+              __tauriModule: 'Process',
               message: {
-                cmd: "exit",
-                exitCode: 1,
-              },
-            });
-          });
-      });
+                cmd: 'exit',
+                exitCode: 1
+              }
+            })
+          })
+      })
     </script>
   </body>
 </html>
