sandbox current app to a directory

--- a/examples/updater/index.html
+++ b/examples/updater/index.html
@@ -7,6 +7,6 @@
     <title>Welcome to Tauri!</title>
   </head>
   <body>
-    <h1>Welcome to Tauri 2.0.0!</h1>
+    <h1>Welcome to Tauri!</h1>
   </body>
 </html>
