--- a/tooling/bench/tests/files_transfer/public/index.html
+++ b/tooling/bench/tests/files_transfer/public/index.html
@@ -25,11 +25,11 @@
           })
           .then((_data) => {
             // success
-            window.__TAURI__.invoke('app_should_close', {exitCode: 0});
+            window.__TAURI__.invoke('app_should_close', { exitCode: 0 })
           })
           .catch((_error) => {
             // error
-            window.__TAURI__.invoke('app_should_close', {exitCode: 1});
+            window.__TAURI__.invoke('app_should_close', { exitCode: 1 })
           })
       })
     </script>
