--- a/tooling/bench/tests/helloworld/public/index.html
+++ b/tooling/bench/tests/helloworld/public/index.html
@@ -10,8 +10,9 @@
     <h1>Welcome to Tauri!</h1>
 
     <script>
-      window.addEventListener('DOMContentLoaded', (event) => 
-        window.__TAURI__.invoke('app_loaded_successfully'));
+      window.addEventListener('DOMContentLoaded', (event) =>
+        window.__TAURI__.invoke('app_loaded_successfully')
+      )
     </script>
   </body>
 </html>
