feat: improve `CSP` security with nonces and hashes, add `devCsp` [TRI-004] (#8)

--- a/examples/navigation/public/nested/index.html
+++ b/examples/navigation/public/nested/index.html
@@ -9,7 +9,11 @@
 
   <body>
     <h1></h1>
-    <button onclick="window.history.back()">Back</button>
+    <button>Back</button>
+    <script>
+      const button = document.querySelector('button')
+      button.addEventListener('click', () => window.history.back())
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
