--- a/examples/navigation/public/secondary.html
+++ b/examples/navigation/public/secondary.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri</title>
-  </head>
 
-  <body>
-    <h1></h1>
-    <button onclick="window.history.back()">Back</button>
-    <script src="secondary.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tauri</title>
+</head>
+
+<body>
+  <h1></h1>
+  <button>Back</button>
+  <script>
+    const button = document.querySelector('button')
+    button.addEventListener('click', () => window.history.back())
+  </script>
+  <script src="secondary.js"></script>
+</body>
+
 </html>
