--- a/examples/multiwindow/index.html
+++ b/examples/multiwindow/index.html
@@ -52,11 +52,11 @@
     var createWindowButton = document.createElement('button')
     createWindowButton.innerHTML = 'Create window'
     createWindowButton.addEventListener('click', function () {
-      var webviewWindow = new WebviewWindow(Math.random().toString())
+      var webviewWindow = new WebviewWindow(Math.random().toString().replace('.', ''))
       webviewWindow.once('tauri://created', function () {
         responseContainer.innerHTML += 'Created new webview'
       })
-      webviewWindow.once('tauri://error', function () {
+      webviewWindow.once('tauri://error', function (e) {
         responseContainer.innerHTML += 'Error creating new webview'
       })
     })
