--- a/examples/streaming/index.html
+++ b/examples/streaming/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      video {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <video
       id="video_source"
-      style="width: 100vw; height: 100vh"
       controls=""
       autoplay=""
       name="media"
