fix: files_transfer benchmark

--- a/tooling/bench/tests/files_transfer/public/index.html
+++ b/tooling/bench/tests/files_transfer/public/index.html
@@ -15,7 +15,7 @@
           .invoke('tauri', {
             __tauriModule: 'Fs',
             message: {
-              cmd: 'readBinaryFile',
+              cmd: 'readFile',
               path: '.tauri_3mb.json',
               options: {
                 // home folder
