refactor(example): simplify streaming example by using asset protocol

--- a/examples/streaming/index.html
+++ b/examples/streaming/index.html
@@ -22,7 +22,7 @@
     const video = document.getElementById('video_source')
     const source = document.createElement('source')
     source.type = 'video/mp4'
-    source.src = convertFileSrc('example/test_video.mp4', 'stream')
+    source.src = convertFileSrc('test_video.mp4')
     video.appendChild(source)
     video.load()
   </script>
